[package]
name = "pollux"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
httparse = "1.5.1"
http = "0.2.4"
httpdate = "1.0.1"
rust-crypto = "^0.2"
bytes = "1"
base64 = "0.13.0"
log4rs = "1.0.0"
log = "0.4"
